--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -55,15 +55,12 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 >
-                <ListView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                <android.support.v7.widget.RecyclerView
                     android:id="@+id/product_list"
-                    android:divider="#00000000"
-                    android:listSelector="@android:color/transparent"
-                    >
-                </ListView>
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"/>
             </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
