--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -50,10 +50,11 @@
                 android:text="@string/product_heading"
                 android:textAllCaps="true"
                 android:textColor="@color/colorOrange"
-                android:textStyle="bold"/>
+                android:textStyle="bold"
+                android:layout_marginBottom="20dp"/>
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 >
                 <android.support.v7.widget.RecyclerView
                     android:id="@+id/product_list"
@@ -79,7 +80,10 @@
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="-20dp"
-            android:background="@drawable/bg_idea"/>
+            android:background="@drawable/bg_idea"
+            android:adjustViewBounds="true"
+            android:cropToPadding="false"
+            android:scaleType="fitXY"/>
             <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
