--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -14,6 +14,9 @@
             android:layout_height="200dp"
             android:contentDescription="@string/splash_logo"
             android:layout_centerInParent="true"
+            android:adjustViewBounds="true"
+            android:cropToPadding="false"
+            android:scaleType="fitXY"
             android:src="@drawable/logo" />
     </RelativeLayout>
 
