--- a/app/src/main/res/layout/product_adapter.xml
+++ b/app/src/main/res/layout/product_adapter.xml
@@ -8,6 +8,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/product_image"
+            android:adjustViewBounds="true"
+            android:cropToPadding="false"
+            android:scaleType="fitXY"
             />
         <TextView
             android:layout_width="match_parent"
